--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       BASE_URL: ${{ secrets.BASE_URL }}
+      PSW: ${{ secrets.PSW }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
